<resources>
    <string name="app_name">Taekwondo Score Keeper</string>
    <string name="btn_punch">Punch +1</string>
    <string name="btn_kick">Kick +2</string>
    <string name="btn_turning_kick">Turning Kick +4</string>
    <string name="btn_head_kick">Head Kick +3</string>
    <string name="btn_turning_head_kick">Turning Head Kick +5</string>
    <string name="btn_penalty">Gam-jeom</string>
</resources>
